--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <base href="/">
     <title>Angular 2 App</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
 
     <!-- 1. Load libraries -->
@@ -29,11 +33,14 @@
             .then(null, console.error.bind(console));
     </script>
 
+    <link rel="stylesheet" href="node_modules/ng2-select/components/css/ng2-select.css">
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+      Loading...
+    </my-app>
   </body>
 </html>
