--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
 
+   
+    <link rel="stylesheet" href="node_modules/ng2-material/dist/ng2-material.css">
+    <link rel="stylesheet" href="node_modules/ng2-material/dist/font.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/ng2-select/components/css/ng2-select.css">
+    <link rel="stylesheet" href="styles.css">
+
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -22,9 +29,20 @@
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
+        map: {
+          "ng2-select":"https://cdn.rawgit.com/justindujardin/ng2-material/410d0dc/ng2-material"
+        },
+        paths: {
+        },
         packages: {        
           app: {
             format: 'register',
+            defaultExtension: 'js'
+          },
+          'ng2-material': {
+            defaultExtension: 'js'
+          },
+          'ng2-select': {
             defaultExtension: 'js'
           }
         }
@@ -32,9 +50,6 @@
       System.import('app/main')
             .then(null, console.error.bind(console));
     </script>
-
-    <link rel="stylesheet" href="node_modules/ng2-select/components/css/ng2-select.css">
-    <link rel="stylesheet" href="styles.css">
   </head>
 
   <!-- 3. Display the application -->
